Revert "add more data into right column"

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
           <!-- dark border changed -->
           <section class="card">
             <div class="btn btn-dark btn-block rounded-0">
-              <em class="fas fa-user"></em> <span>Desk</span>
+              <i class="fas fa-user"></i> <span>Desk</span>
             </div>
             <div class="mt-2 px-3">
               <img
@@ -554,9 +554,9 @@
           <button class="btn btn-sm btn-block btn-danger py-2" type="submit">
             CM Grievance-Lodge Complaint <em class="fas fa-angle-right"></em>
           </button>
-          <!-- Flood releif -->
+
           <div class="border border-dark mt-4">
-            <div class="btn btn-sm btn-dark btn-block rounded-0 py-2 text-left">
+            <div class="btn btn-sm btn-dark btn-block rounded-0 py-2">
               <em class="fas fa-info-circle"></em>
               <span>Flood 2014/releif Distribution</span>
             </div>
@@ -566,9 +566,9 @@
               <span class="badge badge-danger">new</span></a
             >
           </div>
-          <!-- Consumer Grievance -->
+
           <div class="border border-dark mt-4">
-            <div class="btn btn-sm btn-dark btn-block rounded-0 py-2 text-left">
+            <div class="btn btn-sm btn-dark btn-block rounded-0 py-2">
               <em class="fas fa-user"></em>
               <em class="fas fa-user"></em>
               <span>Consumer Grievance Redressal</span>
@@ -593,115 +593,6 @@
               Have Grievence? Lodge Complaint
             </div>
           </div>
-          <!-- District Statistics -->
-          <div class="border border-dark mt-4">
-            <div class="btn btn-sm btn-dark btn-block rounded-0 py-2 text-left">
-              <em class="fas fa-info-circle"></em>
-              <span>District Statistics/Information</span>
-            </div>
-
-            <a
-              href="https://site.com"
-              target="_blank"
-              class="nav-link pt-3 pb-0"
-            >
-              District Census Handbook
-            </a>
-            <a
-              href="https://site.com"
-              target="_blank"
-              class="nav-link pt-0 pb-0"
-            >
-              District Map
-            </a>
-            <a
-              href="https://site.com"
-              target="_blank"
-              class="nav-link pt-0 pb-0"
-            >
-              Government Schools in the District
-            </a>
-            <a
-              href="https://site.com"
-              target="_blank"
-              class="nav-link pt-0 pb-0"
-            >
-              Private Schools in District
-            </a>
-            <a
-              href="https://site.com"
-              target="_blank"
-              class="nav-link pt-0 pb-0"
-            >
-              Village Amenity Directory
-            </a>
-            <a
-              href="https://site.com"
-              target="_blank"
-              class="nav-link pt-0 pb-0"
-            >
-              Police Stations
-            </a>
-            <a
-              href="https://site.com"
-              target="_blank"
-              class="nav-link pt-0 pb-0"
-            >
-              Fire and Emergency Services
-            </a>
-            <a
-              href="https://site.com"
-              target="_blank"
-              class="nav-link pt-0 pb-3"
-            >
-              SRO-43
-            </a>
-          </div>
-          <!-- National Food Safety Act -->
-          <div class="border border-dark mt-4">
-            <div class="btn btn-sm btn-dark btn-block rounded-0 py-2 text-left">
-              <em class="fas fa-crosshairs"></em>
-              <span>National Food Safety Act (NSFA)</span>
-            </div>
-
-            <a
-              href="https://site.com"
-              target="_blank"
-              class="nav-link pt-3 pb-0"
-            >
-              NSFA ACt
-            </a>
-            <a
-              href="https://site.com"
-              target="_blank"
-              class="nav-link pt-0 pb-0"
-            >
-              NSFA FAQs'
-            </a>
-            <a
-              href="https://site.com"
-              target="_blank"
-              class="nav-link pt-0 pb-0"
-            >
-              CAPD - Departmental Portal
-            </a>
-            <h6 class="pl-3 font-weight-bold">District NSFA Helpline</h6>
-            <ol>
-              <li>0123456789 (DC Office)</li>
-              <li>9876543210 (AD Ramban)</li>
-            </ol>
-          </div>
-          <!-- Land Rates -->
-          <div class="border border-dark mt-4">
-            <div class="btn btn-sm btn-dark btn-block rounded-0 py-2 text-left">
-              <em class="far fa-hand-point-right"></em>
-              <span>Land Rates</span>
-            </div>
-
-            <a href="https://site.com" target="_blank" class="nav-link py-3">
-              Land Rates 2010-2017
-            </a>
-          </div>
         </section>
       </div>
     </section>
@@ -720,7 +611,7 @@
             class="btn btn-dark"
             href="https://github.com/wrench1815/site-clone"
             target="_blank"
-            ><em class="fab fa-github"></em> GitHub</a
+            ><i class="fab fa-github"></i> GitHub</a
           >
         </div>
         <!-- Copyright -->
