--- a/index.html
+++ b/index.html
@@ -28,9 +28,12 @@
   </head>
   <body>
     <!-- Start of main Page Container -->
-    <header class="d-flex align-items-center p-2">
-      <img src="Images/logo.png" alt="logo" class="logo-img" />
-      <h1 class="ml-4">Main Heading</h1>
+    <header class="d-flex align-items-center justify-content-between p-2">
+      <div class="d-flex align-items-end">
+        <img src="Images/logo.png" alt="logo" class="logo-img" />
+        <h1 class="ml-4 font-weight-bold">District Administration, Ramban</h1>
+      </div>
+      <em class="fab fa-4x fa-facebook mr-5"></em>
     </header>
 
     <!-- navbar -->
