add Google map Embed

--- a/index.html
+++ b/index.html
@@ -421,6 +421,16 @@
                         dignissimos, laboriosam dolorum! Est quo tempore
                         doloremque expedita?
                       </p>
+                      <div class="embed-responsive">
+                        <div class="gmap_canvas">
+                          <iframe
+                            title="Ramban Map"
+                            width="600"
+                            height="500"
+                            src="https://maps.google.com/maps?q=Ramban&t=k&z=13&ie=UTF8&iwloc=&output=embed"
+                          ></iframe>
+                        </div>
+                      </div>
                     </div>
                   </div>
                 </div>
