scroll bar added

--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
                               </ol>
                             </td>
                             <td class="pre-scrollable">
-                              <ol>
+                              <ol id="custom-scroll">
                                 <li>Dolor</li>
                                 <li>Dolor</li>
                                 <li>Dolor</li>
